# level2-dkt-recsys-01

./: .gitignore  EDA.ipynb  README.md  ensemble.py  ensembles.py  feature_e.py  parseTest.py  transformerlstm.ipynb
bigquery/: data.py  exercise.py  requirements.txt
bigquery/auth/: client.py  table.py
customlast/: create_dataset.py  dataset-args.yaml  dataset.py  lastquery_240122-050616_0.8291.csv  lastquery_240122-061216_0.8316.csv  rnn_config.yaml  run-lastqueryTrmRNN.ipynb
dkt/: ensemble.py  inference.py  nohup.out  train.py
dkt/asset/: test_group_one_classes.npy  test_group_two_classes.npy
dkt/dkt/: Saint.py  args.py  args.yaml  dataloader.py  model.py  scheduler.py  sweep.yaml  trainer.py
dkt/dkt-env/: pyproject.toml
dkt/models/: best_model.pt
dkt/outputs/: saintplus-20240118004836-0_best_model_submission.csv  submission.csv
dkt/wandb/: latest-run  settings
lgbm/: requirements.txt  train.py
lgbm/lgbm/: README.md  args.yaml  datasets.py  datasets_custom.py  feature.py  lgbm.py  trainer.py  utils.py
lightgcn/: inference.py  lightgcn.ipynb  sweep.yaml  train.py
lightgcn/lightgcn-env/: pyproject.toml
notebooks/: gbdt-baseline-catboost.ipynb  gbdt-baseline-lgbm.ipynb  gbdt-baseline-xgboost.ipynb  gbdt-baseline.ipynb  gbdt-update.ipynb  lstm-baseline.ipynb  rnn-baseline.ipynb  rnn-lstm-baseline.ipynb  rnn_config.yaml
results/: CatBoost_240109-032212_qwlfh_0.7507.csv  LightGBM_240109-030340_edzin_0.7143.csv  XGBoost_240109-030628_zvsaw_0.7081.csv  lstm_240110-151907_0.7147.csv  rnn-baseline_240110-102811_0.6941.csv  rnn_240110-143608_0.6943.csv
(+147 files in other folders)
